--- a/man_analytics_app/user_data/users.yaml
+++ b/man_analytics_app/user_data/users.yaml
@@ -1,21 +1,40 @@
+cookie:
+  expiry_days: 30
+  key: some_signature_key
+  name: some_cookie_name
 credentials:
   usernames:
     nikita:
       email: jsmith@gmail.com
-      failed_login_attempts: 0 # Will be managed automatically
-      logged_in: False # Will be managed automatically
+      failed_login_attempts: 0
+      logged_in: false
       name: Nikita Novikov
-      password: abc # Will be hashed automatically
+      password: abc
+      tasks:
+        one more test:
+          complete: false
+          deadline: 2024-05-06
+          description: another test
+        'test ':
+          complete: false
+          deadline: 2024-05-06
+          description: test
+        test 1:
+          complete: false
+          deadline: 2024-05-06
+          description: test
+        test 2:
+          complete: false
+          deadline: 2024-05-06
+          description: "\u0422\u0435\u0441\u0442\u043E\u0432\u0430\u044F \u0437\u0430\
+            \u0434\u0430\u0447\u0430"
     test:
       email: rbriggs@gmail.com
-      failed_login_attempts: 0 # Will be managed automatically
-      logged_in: False # Will be managed automatically
+      failed_login_attempts: 0
+      logged_in: false
       name: Rebecca Briggs
-      password: def # Will be hashed automatically
-cookie:
-  expiry_days: 30
-  key: some_signature_key # Must be string
-  name: some_cookie_name
+      password: def
+      tasks: 0
 pre-authorized:
   emails:
   - melsby@gmail.com
