--- a/man_analytics_app/user_data/users.yaml
+++ b/man_analytics_app/user_data/users.yaml
@@ -7,9 +7,11 @@ credentials:
     nikita:
       email: jsmith@gmail.com
       failed_login_attempts: 0
+      firstname: Nikita
       logged_in: false
       name: Nikita Novikov
       password: abc
+      surname: Novikov
       tasks:
         one more test:
           complete: false
@@ -28,12 +30,19 @@ credentials:
           deadline: 2024-05-06
           description: "\u0422\u0435\u0441\u0442\u043E\u0432\u0430\u044F \u0437\u0430\
             \u0434\u0430\u0447\u0430"
+        "\u0422\u0435\u0441\u0442 3":
+          complete: false
+          deadline: 2024-06-08
+          description: "\u0422\u0435\u0441\u0442\u043E\u0432\u0430\u044F \u0437\u0430\
+            \u0434\u0430\u0447\u0430 3"
     test:
       email: rbriggs@gmail.com
       failed_login_attempts: 0
+      firstname: Nikita
       logged_in: false
       name: Rebecca Briggs
       password: def
+      surname: Novikov
       tasks: 0
 pre-authorized:
   emails:
